--- a/styles.css
+++ b/styles.css
@@ -1,3 +1,18 @@
+body{
+  padding: 20px;
+}
+
+h1{
+  text-align: center;
+  font-size: 2rem;
+}
+
+.top input, button{
+  font-size: 1.5rem;
+  padding: 5px;
+  margin-left: 5px;
+}
+
 .grid-container {
     display: grid;
     margin: 20px;
